<resources>
    <string name="app_name">Generador</string>
    <string name="titulo">TITULO</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_pc">NOMBRE PC</string>
    <string name="todo">TODO</string>
    <string name="logopc">LOGOPC</string>
    <string name="ver">Ver</string>
    <string name="eliminarO">ELIMINAR</string>
    <string name="prefs_file">com.example.apptfg.PREFERENCE.FILE.KEY</string>
    <string name="se_ha_producido_un_error">se ha producido un error</string>
    <string name="olvidar_contrasena"><u>¿Olvidastes tu contraseña?</u></string>
    <string name="ofimatica">OFIMATICA</string>
    <string name="diseño">Edicion / Diseño</string>
    <string name="gamingp">GAMING PROFESIONAL</string>
    <string name="gaming">GAMING</string>
    <string name="generador">GENERADOR</string>
    <string name="uso">Uso del ordenador</string>
    <string name="nada" />
    <string name="ficha_tecnica">Ficha tecnica</string>
    <string name="guardar_ordenador">guardar ordenador</string>
    <string name="borrar_ordenador">borrar Ordenador</string>
    <string name="nule">null</string>
    <string name="volver">Volver</string>
</resources>